plugins/kotlin/idea/tests/testData/multiModuleHighlighting/multiplatform/triangle/base_common/My.kt
expect class <error descr="[NO_ACTUAL_FOR_EXPECT]">My</error>
expect fun <error descr="[NO_ACTUAL_FOR_EXPECT]">bar</error>()